# snakqt

./: CMakeLists.txt  LICENSE  README.md
doc/: architecture.md
src/: main.cpp
src/appSnakqt/: main.qml
src/libSnakqt/: board.cpp  board.hpp  startup.cpp  startup.hpp
test/: CMakeLists.txt
test/src/: board_test.cpp  main.cpp  startup_test.cpp  toolchain_test.cpp
